syntax = "proto3";
package g2config;

option go_package = "github.com/senzing/servegrpc/protobuf/g2config";

service G2Config {
  rpc AddDataSource (AddDataSourceRequest) returns (AddDataSourceResponse) {}
  rpc Close (CloseRequest) returns (CloseResponse) {}
  rpc Create (CreateRequest) returns (CreateResponse) {}
  rpc DeleteDataSource (DeleteDataSourceRequest) returns (DeleteDataSourceResponse) {}
  rpc Destroy (DestroyRequest) returns (DestroyResponse) {}
  rpc Init (InitRequest) returns (InitResponse) {}
  rpc ListDataSources (ListDataSourcesRequest) returns (ListDataSourcesResponse) {}
  rpc Load (LoadRequest) returns (LoadResponse) {}
  rpc Save (SaveRequest) returns (SaveResponse) {}
}

message AddDataSourceRequest {
  int64 configHandle = 1;
  string inputJson = 2;
}
message AddDataSourceResponse {
  string result = 1;
}

message CloseRequest {
  int64 configHandle = 1;
}

message CloseResponse {}

message CreateRequest {}

message CreateResponse {
  int64 result = 1;
}

message DeleteDataSourceRequest {
  int64 configHandle = 1;
  string inputJson = 2;
}

message DeleteDataSourceResponse {}

message DestroyRequest {}

message DestroyResponse {}

message InitRequest {
  string moduleName = 1;
  string iniParams = 2;
  int32 verboseLogging = 3;
}

message InitResponse {}

message ListDataSourcesRequest {
  int64 configHandle = 1;
}

message ListDataSourcesResponse {
  string result = 1;
}

message LoadRequest {
  int64 configHandle = 1;
  string jsonConfig = 2;
}

message LoadResponse {
}

message SaveRequest {
  int64 configHandle = 1;
}

message SaveResponse {
  string result = 1;
}
